DEV/src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>City_town__c</fullName>
        <label>City/town</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Request</label>
        <referenceTo>Resource_Request__c</referenceTo>
        <relationshipLabel>Candidate</relationshipLabel>
        <relationshipName>Candidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Offer Sent</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_address__c</fullName>
        <label>Street address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>avaiable_on_weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>avaiable on weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>candidate_Id__c</fullName>
        <displayFormat>CI-{0000}</displayFormat>
        <label>candidate Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>desired_salary__c</fullName>
        <label>desired salary</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>earliest_start_date__c</fullName>
        <label>earliest start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>language_spoken__c</fullName>
        <label>language spoken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>laptop_details__c</fullName>
        <label>laptop details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>laptop_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>laptop required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_Name__c</fullName>
        <label>last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>past_company_info__c</fullName>
        <label>past company info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>past_exp__c</fullName>
        <label>past exp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>postal_zip_code__c</fullName>
        <label>postal/zip code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>relocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>resume__c</fullName>
        <label>resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>start_location__c</fullName>
        <label>start location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>East Sussex</fullName>
                </value>
                <value>
                    <fullName>NewYork</fullName>
                </value>
                <value>
                    <fullName>Wayne</fullName>
                </value>
                <value>
                    <fullName>Ex</fullName>
                </value>
                <value>
                    <fullName>Ex1</fullName>
                </value>
                <value>
                    <fullName>Ex2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>